--- a/css/minhaConta.css
+++ b/css/minhaConta.css
@@ -29,9 +29,9 @@
 .dropdown-menu {
   display: none;
   position: absolute;
-  background-color: gray;
-  color: black;
+  color: #9b7fb6;
   border-radius: 8px;
+  background-color: #eae6ed;
   padding: 10px;
   box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
   z-index: 1111 !important;
@@ -47,13 +47,15 @@
 .dropdown-menu a {
   text-decoration: none;
   display: block;
-  padding: 8px;
-  color: orange;
+  padding: 4px;
+  color: #9b7fb6;
   font-weight: bold;
+  font-size: 14px;
 }
 
 .dropdown-menu a:hover {
-  background-color: #f1f1f1;
+  background-color: #d3c6e1;
+  color: #6a517a;
 }
 
 
